@@ -427,6 +427,7 @@ The versions identified by the qualifiers are those that are obsoleted by the
 distribution being described.  If no qualifiers are given, all versions of the
 named module or package are understood to be obsoleted.
 
+.. _distutils-installing-scripts:
 
 Installing Scripts
 ==================
@@ -449,6 +450,12 @@ way.  From the PyXML setup script::
          scripts=['scripts/xmlproc_parse', 'scripts/xmlproc_val']
          )
 
+All the scripts will also be added to the ``MANIFEST``
+file if no template is provided. See :ref:`manifest`.
+
+.. versionadded:: 2.7
+
+.. _distutils-installing-package-data:
 
 Installing Package Data
 =======================
@@ -491,6 +498,13 @@ The corresponding call to :func:`setup` might be::
          )
 
 
+All the files that match ``package_data`` will be added to the ``MANIFEST``
+file if no template is provided. See :ref:`manifest`.
+
+.. versionadded:: 2.7
+
+.. _distutils-additional-files:
+
 Installing Additional Files
 ===========================
 
@@ -524,6 +538,11 @@ without specifying a target directory, but this is not recommended, and the
 :command:`install` command will print a warning in this case. To install data
 files directly in the target directory, an empty string should be given as the
 directory.
+
+All the files that match ``data_files`` will be added to the ``MANIFEST``
+file if no template is provided. See :ref:`manifest`.
+
+.. versionadded:: 2.7
 
 
 .. _meta-data:
